--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 body {
   margin: 0;
   font-family: 'Segoe UI', Helvetica, Arial;
+  /*nao tem scrol vertical, excuido da estruta geral. e colcar em apenas pageBody*/
+  overflow-y: hidden;
 }
